Updated jacoco version

--- a/build.gradle
+++ b/build.gradle
@@ -42,12 +42,21 @@ jar {
     }
 }
 
+jacoco {
+    toolVersion = "0.7.6.201602180812"
+}
+
 jacocoTestReport {
     reports {
         xml.enabled true
-        csv.enabled false
         html.enabled true
     }
+
+//    afterEvaluate {
+//        classDirectories = files(classDirectories.files.collect {
+//            fileTree(dir: it, exclude: [])
+//        })
+//    }
 }
 
 dependencies {
