--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,7 @@ jacocoTestReport {
 
     afterEvaluate {
         classDirectories = files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: ["**/DateTime.*"])
+            fileTree(dir: it, exclude: ["**/DateTime.*", "**/InstanceFactory.*"])
         })
     }
 }
@@ -92,6 +92,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-all:1.10.19'
     testCompile 'org.assertj:assertj-core:3.4.1'
+    testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '1.6.5'
+    testCompile group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.5'
+
 
 }
 
