--- a/build.gradle
+++ b/build.gradle
@@ -90,8 +90,12 @@ dependencies {
     compile 'org.bukkit:bukkit:1.7.9-R0.2'
 
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-all:1.10.19'
+    testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'org.assertj:assertj-core:3.4.1'
+    testCompile 'org.powermock:powermock-module-junit4:1.6.5'
+    testCompile 'org.powermock:powermock-api-mockito:1.6.5'
+    testCompile 'org.powermock:powermock-module-junit4-rule:1.6.5'
+    testCompile 'org.powermock:powermock-classloading-xstream:1.6.5'
 }
 
 clean << {
